# sfml-modern-cmake-example

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: main.cpp
